[package]
name = "solconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
structopt = "0.3.26"
tokio = { version = "1.28", features = ["full"] }
solana-sdk = { version = "2.0.13", features = ["program"] }
env = { version = "0.4", features = ["serde"] }